# crm

./: .pre-commit-config.yaml  Cargo.toml  cliff.toml  deny.toml
crm/: Cargo.toml
crm-metadata/: Cargo.toml  build.rs
crm-metadata/src/: config.rs  lib.rs  main.rs
crm-metadata/src/abi/: mod.rs
crm-metadata/src/pb/: metadata.rs
crm-send/: Cargo.toml
crm-send/src/: config.rs  lib.rs  main.rs
crm-send/src/abi/: email.rs  in_app.rs  mod.rs  sms.rs
crm-send/src/pb/: notification.rs
crm/src/: client.rs  lib.rs  server.rs
crm/src/abi/: crm.rs
crm/src/pb/: crm.rs
user-stat/: .env  Cargo.toml  user_stat.yaml
user-stat/examples/: gen-fake.rs
user-stat/src/: config.rs  lib.rs
user-stat/src/abi/: mod.rs
user-stat/src/pb/: user_stats.rs
